--- a/build.gradle
+++ b/build.gradle
@@ -32,10 +32,12 @@ dependencies {
 
     // JPA Data (We are going to use Repositories, Entities, Hibernate, etc...)
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+    compile("org.springframework.boot:spring-boot-starter-security")
 
     // Use MySQL Connector-J
     compile 'mysql:mysql-connector-java'
 
-    testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile("org.springframework.boot:spring-boot-starter-test")
+    testCompile("org.springframework.security:spring-security-test")
     testCompile("junit:junit")
 }
