--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/sweater
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.jpa.generate-ddl=true
+spring.mustache.expose-request-attributes=true
